<resources>
    <string name="app_name">SIMPEL</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_absensi">Absensi</string>
    <string name="menu_laporan">Laporan</string>
    <string name="menu_raport">Raport</string>
    <string name="menu_percakapan">Percakapan</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="kelas">Kelas</string>
    <string name="lainnya">Lainnya</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="keluar">Keluar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daftar_laporan_siswa">Daftar Laporan Siswa</string>
    <string name="nama_ortu">M. Alam Cahya</string>
    <string name="judul_laporan1">Anak anda berkelahi</string>
    <string name="detil_laporan1">Berkelahi dengan tem..</string>
    <string name="tgl_laporan1">5 April 2019</string>
    <string name="waktu_laporan1">12:30 WIB</string>
    <string name="pengumuman">Pengumuman</string>
    <string name="tgl_laporan2">4 April 2019</string>
    <string name="waktu_laporan2">11:00 WIB</string>
    <string name="judul_laporan2">Bazzar Sekolah</string>
    <string name="detil_laporan2">Akan diadakan pada tg..</string>
    <string name="menang_lomba">Menang Lomba</string>
    <string name="detil_laporan3">Anak anda, mendapat..</string>
    <string name="tgl_laporan3">2 April 2019</string>
    <string name="daftar_siswa">Daftar Siswa</string>
    <string name="ani">Ani</string>
    <string name="budi">Budi</string>
    <string name="dina">Dina</string>
    <string name="nilai_siswa">Nilai Siswa</string>
    <string name="tambah_nilai">Tambah Nilai</string>
    <string name="ortu">Daniel Kurniawan</string>
    <string name="wali_murid">Wali Murid</string>
</resources>
