<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_absensi">

    <fragment
        android:id="@+id/nav_absensi"
        android:name="com.alproits.simpel.ui.absensi.AbsensiFragment"
        android:label="@string/menu_absensi"
        tools:layout="@layout/fragment_absensi" />

    <fragment
        android:id="@+id/nav_laporan"
        android:name="com.alproits.simpel.ui.laporan.LaporanFragment"
        android:label="@string/menu_laporan"
        tools:layout="@layout/fragment_laporan" />

    <fragment
        android:id="@+id/nav_raport"
        android:name="com.alproits.simpel.ui.raport.RaportFragment"
        android:label="@string/menu_raport"
        tools:layout="@layout/fragment_raport" />

    <fragment
        android:id="@+id/nav_percakapan"
        android:name="com.alproits.simpel.ui.percakapan.PercakapanFragment"
        android:label="@string/menu_percakapan"
        tools:layout="@layout/fragment_percakapan" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.alproits.simpel.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.alproits.simpel.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>