<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_kelas"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/kelas" />
        <item
            android:id="@+id/nav_laporan"
            android:icon="@drawable/ic_report_black_24dp"
            android:title="@string/menu_laporan" />
        <item
            android:id="@+id/nav_raport"
            android:icon="@drawable/ic_content_paste_black_24dp"
            android:title="@string/menu_raport" />
        <item
            android:id="@+id/nav_percakapan"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/menu_percakapan" />
    </group>

</menu>
