<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".teacher.laporan.LaporanFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        android:background="@drawable/bg_red"
        android:padding="@dimen/text_padding"
        android:text="@string/daftar_laporan_siswa"
        android:textColor="@color/colorTextWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLaporan1"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:layout_marginBottom="@dimen/fragment_vertical_margin"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/text_padding"
                android:layout_marginBottom="@dimen/text_padding"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nama_ortu"
                android:textColor="@color/colorTextDark" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_padding"
                android:layout_marginBottom="@dimen/text_padding"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/text_padding"
                android:paddingRight="@dimen/text_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/judul_laporan1"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detil_laporan1"
                    android:textColor="@color/colorTextDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_padding"
                android:layout_marginBottom="@dimen/text_padding"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tgl_laporan1"
                    android:textColor="@color/colorTextDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waktu_laporan1"
                    android:textColor="@color/colorTextDark" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLaporan2"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:layout_marginBottom="@dimen/fragment_vertical_margin"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/text_padding"
                android:layout_marginBottom="@dimen/text_padding"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/pengumuman"
                android:textColor="@color/colorTextDark" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_padding"
                android:layout_marginBottom="@dimen/text_padding"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/text_padding"
                android:paddingRight="@dimen/text_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/judul_laporan2"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detil_laporan2"
                    android:textColor="@color/colorTextDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_padding"
                android:layout_marginBottom="@dimen/text_padding"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tgl_laporan2"
                    android:textColor="@color/colorTextDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waktu_laporan2"
                    android:textColor="@color/colorTextDark" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLaporan3"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:layout_marginBottom="@dimen/fragment_vertical_margin"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/text_padding"
                android:layout_marginBottom="@dimen/text_padding"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/nama_ortu"
                android:textColor="@color/colorTextDark" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_padding"
                android:layout_marginBottom="@dimen/text_padding"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingLeft="@dimen/text_padding"
                android:paddingRight="@dimen/text_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menang_lomba"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detil_laporan3"
                    android:textColor="@color/colorTextDark" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_padding"
                android:layout_marginBottom="@dimen/text_padding"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tgl_laporan3"
                    android:textColor="@color/colorTextDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waktu_laporan1"
                    android:textColor="@color/colorTextDark" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>