<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".teacher.rapot.RapotFragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/nav_header_vertical_spacing"
        android:background="@drawable/bg_red"
        android:padding="@dimen/text_padding"
        android:text="@string/nilai_siswa"
        android:textColor="@color/colorTextWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLaporan1"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:layout_marginBottom="@dimen/fragment_vertical_margin"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"

            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/pp"
                android:scaleType="fitXY"
                android:layout_marginRight="@dimen/fab_margin"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ani"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="001"/>

            </LinearLayout>

            <Button
                android:layout_width="96dp"
                android:layout_height="64dp"
                android:elevation="2dp"
                android:text="@string/tambah_nilai"
                android:textColor="@android:color/black"/>

        </LinearLayout>



    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLaporan2"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:layout_marginBottom="@dimen/fragment_vertical_margin"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"

            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/pp"
                android:scaleType="fitXY"
                android:layout_marginRight="@dimen/fab_margin"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/budi"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="002"/>

            </LinearLayout>

            <Button
                android:layout_width="96dp"
                android:layout_height="64dp"
                android:elevation="2dp"
                android:text="@string/tambah_nilai"
                android:textColor="@android:color/black"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardLaporan3"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fragment_vertical_margin"
        android:layout_marginBottom="@dimen/fragment_vertical_margin"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/text_padding"
            android:paddingRight="@dimen/text_padding"

            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginTop="@dimen/fab_margin">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/pp"
                android:scaleType="fitXY"
                android:layout_marginRight="@dimen/fab_margin"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dina"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="003"/>

            </LinearLayout>

            <Button
                android:layout_width="96dp"
                android:layout_height="64dp"
                android:elevation="2dp"
                android:text="@string/tambah_nilai"
                android:textColor="@android:color/black"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>